--- a/src/Components/History/History.css
+++ b/src/Components/History/History.css
@@ -1,7 +1,6 @@
 .layout-history {
 	display: grid;
 	grid-template-rows: 1fr 8%;
-	padding: 4rem 1rem 0 0;
 	position: relative;
 }
 
@@ -9,6 +8,7 @@
 	background-color: var(--color-bg--primary);
 	height: 900px;
 	width: 20rem;
+	padding: 4rem 1rem 0 0;
 	border-radius: 0 0.7rem 0.7rem 0;
 }
 
@@ -50,4 +50,24 @@
 .history_footer {
 	display: grid;
 	place-items: center end;
+}
+
+@media only screen and (max-width: 1024px) {
+	.history {
+		border-radius: 0;
+		height: 100%;
+		max-height: 100vh;
+		width: 100%;
+		padding: 4rem 0.7rem 0.7rem 0.7rem;
+	}
+
+	.list-entry {
+		font-size: 3vw;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.list-entry {
+		font-size: 5vw;
+	}
 }
